# tap-appveyor

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml
tap_appveyor/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: conftest.py  test_core.py
