[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-appveyor"
description = "Singer tap for AppVeyor, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "AppVeyor",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-appveyor" = "tap_appveyor.tap:TapAppVeyor.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-appveyor#readme"
Homepage = "https://github.com/reservoir-data/tap-appveyor"
Repository = "https://github.com/reservoir-data/tap-appveyor"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "ty>=0.0.21",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_appveyor",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "--durations=10",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:No records were available to test:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.22"
requires = [
  "tox",
  "tox-uv",
]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_appveyor", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_appveyor", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_APPVEYOR_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
