[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.30.1",
]

[project]
name = "tap-appveyor"
description = "Singer tap for AppVeyor, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "AppVeyor",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.55.0a1",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-appveyor = "tap_appveyor.tap:TapAppVeyor.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-appveyor#readme"
Homepage = "https://github.com/reservoir-data/tap-appveyor"
Repository = "https://github.com/reservoir-data/tap-appveyor"

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.44",
  { include-group = "testing" },
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.11"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
  "--durations=10",
]
filterwarnings = [
  "error",
  "once:No records were available to test:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  "tox>=4.55",
  "tox-uv",
]
env_list = [
  "dependencies",
  "test",
  "typing",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
labels = [ "check" ]
[tool.tox.env.test]
description = "run tests on Python {py_dot_ver}"
base_python_file = [ ".python-version" ]
[tool.tox.env.typing]
description = "type checks with mypy and ty"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_appveyor", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_appveyor", "tests" ], extend = true } ],
]
labels = [ "check" ]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run tests on Python {env_name}"
base_python_file = [ ".python-version" ]
dependency_groups = [ "testing" ]
pass_env = [ "TAP_APPVEYOR_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
